logs/nano/1306941/inven_ms_pre.err
  File "/home/hpc/iwi5/iwi5298h/Uddipan-Thesis/nanonets/multi/inven_ms_pre.py", line 30
    import numpy as np as _np  # to avoid shadowing np above? but we already imported np above
                       ^^
SyntaxError: invalid syntax
